--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
               <li><a href="#about">About</a></li>
               <li><a href="#services">Services</a></li>
               <li><a href="#contacts">Contact</a></li>
+              <li><a href="./loml/loml.html">Loml</a></li>
             </ul>
           </div>
           <div class="burger">
