--- a/loml/flower/flower.html
+++ b/loml/flower/flower.html
@@ -23,8 +23,8 @@
   <a href="/loml/loml2.html" class="next_btn">Next</a>
 
 
-  <iframe src="/loml/audio/123.mp3" allow="autoplay" style="display:none" id="iframeAudio">
-  </iframe>
+  <!--<iframe src="/loml/audio/123.mp3" allow="autoplay" style="display:none" id="iframeAudio">
+  </iframe>-->
 
   <audio autoplay loop  id="playAudio">
     <source src="/loml/audio/123.mp3">
