--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       <div class="contacts-container">
         <div class="form-container">
           <form
-            action="https://formsubmit.co/62282133c2e65f7054200b9b575eb754 "
+            action="https://formsubmit.co/el/cosare "
             method="POST"
           >
             <div class="wrap">
